# krpc

./: CMakeLists.txt
cmake/: compiler.cmake
src/: channel.h  defines.h  frame.cpp  frame.h  global.cpp  global.h  kexception.h  service.h  struct.h
src/buffer/: allocator.h  buffer.cpp  buffer.h  buffer_list.cpp  buffer_list.h  fixed_size_allocator.cpp  fixed_size_allocator.h  io_buffer.cpp  io_buffer.h  io_read_buffer.cpp  io_read_buffer.h  io_write_buffer.cpp  io_write_buffer.h  object_allocator.h  write_buffer_allocator.h
src/driver/: ev.h  ev_io.cpp  ev_io.h  ev_process_internal.cpp
src/driver/reactor/: reactor_epoll.cpp
src/net/: accept_adaptor.cpp  accept_adaptor.h  acceptor.cpp  acceptor.h  callback_object.h  conn_id_generator.cpp  conn_id_generator.h  net_config.cpp  net_config.h  net_connection.cpp  net_connection.h  net_connector.cpp  net_connector.h  net_event.h  net_manager.cpp  net_manager.h  net_pipe.cpp  net_pipe.h  net_processor.cpp  net_processor.h  net_protocol.h  net_request_processor.h  notifier.cpp  notifier.h  raw_data_handler.h  tcp_socket.cpp  tcp_socket.h  when_receive_packet.h
src/net/server/: accept_adaptor.cpp  accept_adaptor.h  acceptor.cpp  acceptor.h  conn_id_generator.cpp  conn_id_generator.h  net_connection.cpp  net_connection.h  net_connector.cpp  net_connector.h  net_manager.cpp  net_manager.h  net_packet.h  net_pipe.h  net_processor.cpp  net_processor.h  notifier.cpp  notifier.h  when_receive_packet.h
src/protocol/: binary_protocol.h  binary_protocol.inl  protocol.h  protocol_exception.h
src/stream/: buffer_stream.cpp  buffer_stream.h  file_stream.cpp  file_stream.h  stream.h  stream_exception.h
src/test/: anet_client.cpp  client.cpp  main.cpp  test_allocator.cpp  test_callback.cpp  test_io_buffer.cpp  test_list.cpp  test_net_connection.cpp  test_tcp_socket.cpp
src/util/: atomic.h  atomic_32.h  atomic_64.h  bits.h  current_thread.cpp  current_thread.h  id_creator.h  list.h  locker.h
test/: CMakeLists.txt  fd_error.cpp  io1.cpp  io_timeout.cpp  test_timer1.cpp
test/time_service/: CMakeLists.txt  connection.cpp  connection.h  main.cpp  message.h  server.cpp  server.h
