PROJECT(test)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(../..)
INCLUDE_DIRECTORIES(../../core)

SET(CMAKE_CXX_FLAGS_DEBUG   "$ENV{CXXFLAGS} -g -O0 -Wall -Wno-unused-parameter -Wunused-function -Wunused-variable -Wunused-value -W -D_FILE_OFFSET_BITS=64 -D_LARGE_FILE")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS}    -O2 -Wall -Wno-unused-parameter -Wunused-function -Wunused-variable -Wunused-value -W -D_FILE_OFFSET_BITS=64 -D_LARGE_FILE")

IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
    MESSAGE(STATUS "Debug Mode")
    MESSAGE(STATUS "Flags:" ${CMAKE_CXX_FLAGS_DEBUG} )
ELSE (CMAKE_BUILD_TYPE STREQUAL "Release")
    MESSAGE(STATUS "Release Mode")
    MESSAGE(STATUS "Flags:" ${CMAKE_CXX_FLAGS_RELEASE})
ENDIF (CMAKE_BUILD_TYPE STREQUAL "Debug")

SET(LIBRARIES
    ${CMAKE_CURRENT_SOURCE_DIR}/../../build/libevnet.so
)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SRC)

ADD_EXECUTABLE(server ${SRC})
TARGET_LINK_LIBRARIES(server ${LIBRARIES})

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)

